# agents

./: AI_Agents_초보자_가이드.md  main.ipynb  main.py  pyproject.toml
First Agent/config/: tasks.yaml
News Reader Tasks and Agents/: main.py
News Reader Tasks and Agents/config/: agents.yaml  tasks.yaml
News Reader Tasks and Agents/output/: content_harvest.md  final_report.md  summary.md
config/: agents.yaml
