[project]
name = "agent_1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=0.201.1",
    "crewai-tools>=0.76.0",
    "firecrawl-py>=2.16.3",
    "openai>=1.90.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
